[WK2] AlternativeTextClient leaks when the page is destroyed https://bugs.webkit.org/show_bug.cgi?id=84307 <rdar://problem/11328431>

Reviewed by Enrica Casucci.

Source/WebCore:

* page/AlternativeTextClient.h: Add pageDestroyed() call, as in EditorClient.
(AlternativeTextClient):
* page/Page.cpp:
(WebCore::Page::~Page): When the page is destroyed, notify the client if it exists.

Source/WebKit/mac:

* WebCoreSupport/WebAlternativeTextClient.h: Implement pageDestroyed(), as in EditorClient.
(WebAlternativeTextClient):
* WebCoreSupport/WebAlternativeTextClient.mm:
(WebAlternativeTextClient::pageDestroyed): Deletes itself.

Source/WebKit2:

* WebProcess/WebCoreSupport/WebAlternativeTextClient.h: Implement pageDestroyed(), as in EditorClient.
(WebAlternativeTextClient):
* WebProcess/WebCoreSupport/mac/WebAlternativeTextClient.cpp:
(WebKit::WebAlternativeTextClient::pageDestroyed): Deletes itself.

Canonical link: https://commits.webkit.org/102511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115369 268f45cc-cd09-0410-ab3c-d52691b4dbfc