Source/WebKit2/WebProcess/WebCoreSupport/WebAlternativeTextClient.h
@@ -37,6 +37,7 @@ class WebAlternativeTextClient : public WebCore::AlternativeTextClient {
 public:
     WebAlternativeTextClient(WebPage *);
     virtual ~WebAlternativeTextClient();
+    virtual void pageDestroyed() OVERRIDE;
     virtual void showCorrectionAlternative(WebCore::AlternativeTextType, const WebCore::FloatRect& boundingBoxOfReplacedString, const String& replacedString, const String& replacementString, const Vector<String>& alternativeReplacementStrings) OVERRIDE;
     virtual void dismissAlternative(WebCore::ReasonForDismissingAlternativeText) OVERRIDE;
     virtual String dismissAlternativeSoon(WebCore::ReasonForDismissingAlternativeText) OVERRIDE;
