Source/WebKit2/WebProcess/WebCoreSupport/mac/WebAlternativeTextClient.cpp
@@ -46,6 +46,11 @@ WebAlternativeTextClient::~WebAlternativeTextClient()
 #endif
 }
 
+void WebAlternativeTextClient::pageDestroyed()
+{
+    delete this;
+}
+
 void WebAlternativeTextClient::showCorrectionAlternative(AlternativeTextType type, const FloatRect& boundingBoxOfReplacedString, const String& replacedString, const String& replacementString, const Vector<String>& alternativeReplacementStrings)
 {
 #if USE(AUTOCORRECTION_PANEL)
